force-app/main/default/objects/Project__c/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>契約日</label>
    <type>Date</type>
</CustomField>