force-app/main/default/objects/Project__c/fields/ContractElapsedDays__c.field-meta.xml
<CustomField>
    <fullName>ContractElapsedDays__c</fullName>
    <formula>IF(ISBLANK( ContractDate__c ),
IF(ISBLANK( ScheduledContractDate__c ),
&quot;契約予定日未入力&quot;,
IF( ScheduledContractDate__c &gt; TODAY(),
NULL,
TEXT( TODAY() - ScheduledContractDate__c ) + &quot;日経過&quot;
)
),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約予定経過日数</label>
    <type>Text</type>
</CustomField>