force-app/main/default/objects/Project__c/fields/ContractReason__c.field-meta.xml
<CustomField>
    <fullName>ContractReason__c</fullName>
    <label>予定日を過ぎた理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>決済者の承認に時間がかかった</fullName>
            </value>
            <value>
                <fullName>客先都合で契約日調整</fullName>
            </value>
            <value>
                <fullName>書類準備遅れ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>