force-app/main/default/objects/Project__c/fields/FixedContracDifference__c.field-meta.xml
<CustomField>
    <fullName>FixedContracDifference__c</fullName>
    <formula>ContractAmount__c  - QuoationAmount__c</formula>
    <label>契約金額との誤差</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>