force-app/main/default/objects/Project__c/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>失注理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予算が合わなかった</fullName>
            </value>
            <value>
                <fullName>競合に負けた</fullName>
            </value>
            <value>
                <fullName>相見積のため</fullName>
            </value>
            <value>
                <fullName>工事予定が合わなかった</fullName>
            </value>
            <value>
                <fullName>納期に間に合わないから</fullName>
            </value>
            <value>
                <fullName>予算が下りなくなった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>