force-app/main/default/objects/Project__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>情報あり</fullName>
            </value>
            <value>
                <fullName>提案/聞き取り</fullName>
            </value>
            <value>
                <fullName>見積依頼</fullName>
            </value>
            <value>
                <fullName>見積提出</fullName>
            </value>
            <value>
                <fullName>受注/契約</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>