force-app/main/default/objects/Project__c/fields/PriceReductionReason__c.field-meta.xml
<CustomField>
    <fullName>PriceReductionReason__c</fullName>
    <label>値下げの理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>顧客からの要請により</fullName>
            </value>
            <value>
                <fullName>他案件との調整</fullName>
            </value>
            <value>
                <fullName>工事ミスにつき</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>