force-app/main/default/objects/Project__c/fields/QuoationAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoationAmount__c</fullName>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>