force-app/main/default/objects/Project__c/fields/ScheduledContractDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledContractDate__c</fullName>
    <label>契約予定日</label>
    <type>Date</type>
</CustomField>